# Focalors

./: .gitignore  BRANCH.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  gpu-trainer.yml
assets/mascot/: README.md
assets/pieces/: README.md
docs/: GPU_TRAINING.md  TECHNICAL.md
nets/: current.nnue  gen1v2.nnue  gen3v2.nnue
packaging/: README.txt
scripts/: build-pgo.sh
src/: analysis.rs  attacks.rs  board.rs  db.rs  eval.rs  gui.rs  lichess.rs  main.rs  movegen.rs  moves.rs  openings.rs  pgn.rs  puzzles.rs  search.rs  selfmatch.rs  selfplay.rs  strength.rs  trainer.rs  trainer_gpu.rs  tt.rs  tuning.rs  types.rs  uci.rs  zobrist.rs
src/nnue/: accumulator.rs  features.rs  mod.rs  network.rs  simd.rs
