[package]
name = "focalors"
version = "0.2.0"
edition = "2024"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
bitflags = "2.11.0"
dirs = "6.0.0"
# Use the glow (OpenGL) backend explicitly. The default wgpu/Vulkan path
# can have lag/compatibility issues on some Linux setups (Mesa/driver state).
# OpenGL is more universally compatible and plenty fast for our chess GUI.
eframe = { version = "0.34.1", default-features = false, features = ["default_fonts", "glow", "wayland", "x11", "accesskit"] }
egui = "0.34.1"
egui_plot = "0.35.0"
image = { version = "0.25.10", features = ["png"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
